--- a/dancing_game.ipynb
+++ b/dancing_game.ipynb
@@ -221,14 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dev_pattern(pat):\n",
     "    f = np.array([1])\n",
     "    for i in pat:\n",
-    "        f = np.kron(i,f)\n",
+    "        f = np.kron(f,i)\n",
     "    return f"
    ]
   },
@@ -508,7 +508,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
