--- a/Old ideas/reward_design.ipynb
+++ b/Old ideas/reward_design.ipynb
@@ -281,14 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dev_pattern(pat):\n",
     "    f = np.array([1])\n",
     "    for i in pat:\n",
-    "        f = np.kron(i,f)\n",
+    "        f = np.kron(f,i)\n",
     "    return f"
    ]
   },
