--- a/Test on MCCL/basis_pursuit_test.ipynb
+++ b/Test on MCCL/basis_pursuit_test.ipynb
@@ -267,14 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def dev_pattern(pat):\n",
     "    f = np.array([1])\n",
     "    for i in pat:\n",
-    "        f = np.kron(f,i)\n",
+    "        f = np.kron(i,f)\n",
     "    return f"
    ]
   },
