--- a/Test on MCCL/different_rules_test.ipynb
+++ b/Test on MCCL/different_rules_test.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
     "def dev_pattern(pat):\n",
     "    f = np.array([1])\n",
     "    for i in pat:\n",
-    "        f = np.kron(i,f)\n",
+    "        f = np.kron(f,i)\n",
     "    return f"
    ]
   },
@@ -478,7 +478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
