--- a/Test on MCCL/iterative_MCCL.ipynb
+++ b/Test on MCCL/iterative_MCCL.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
     "def dev_pattern(pat):\n",
     "    f = np.array([1])\n",
     "    for i in pat:\n",
-    "        f = np.kron(i,f)\n",
+    "        f = np.kron(f,i)\n",
     "    return f"
    ]
   },
